infra/route_table.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.challenger_vpc.id
  tags = {

    Name = "challenger_public"
  }
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw_challenger.id
  }
}
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
